# nimbus

./: .gitignore  LICENSE  README.md  od-surveil-scope.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md  privacy.md
docs/demos/: 01-ambient-sense.md
src/nimbus/: agent.py  cli.py
src/nimbus/collector/: _vendor.py  ble.py  dedup.py  wifi.py
src/nimbus/privacy/: hashing.py  optout.py
src/nimbus/server/: app.py  resources.py  schemas.py  tools.py
src/nimbus/store/: queries.py  retention.py  schema.py
systemd/: nimbus-collector.service  ollama.service
tests/: conftest.py  test_agent.py  test_privacy.py  test_store.py  test_tools.py
