[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nimbus"
version = "0.1.0"
description = "A fully local MCP server that gives an LLM a sense of place via Wi-Fi and BLE sensing"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "ollama>=0.3",
    "scapy>=2.5",
    "bleak>=0.21",
    "typer>=0.12",
    "pydantic>=2.0",
    "pytest>=9.0.3",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
]

[project.scripts]
nimbus = "nimbus.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/nimbus"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
